--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
@@ -1495,6 +1495,19 @@ tr.ui-state-highlight a:not(.btn), .ui-widget-content tr.ui-state-highlight a:no
 	}
 }
 
+/* Scrollable tables */
+
+.ui-datatable:not(.headerless-table) table {
+	min-width: 65em;
+}
+
+div.manageTable,
+div.filesTable {
+	&.ui-datatable.ui-widget div.ui-datatable-tablewrapper {
+		overflow-x: auto;
+	}
+}
+
 .panel-default > .panel-heading {
 	border-radius: $border-radius $border-radius 0 0;
 	display: block;
@@ -1645,6 +1658,17 @@ tr.ui-state-highlight a:not(.btn), .ui-widget-content tr.ui-state-highlight a:no
 /* Change cursor from pointer to default to avoid confusion */
 .ui-datatable-selectable td {
 	cursor: default;
+}
+
+/* Charts */
+
+.chart-wrapper {
+	height: 300px;
+	overflow-x: auto;
+
+	> div {
+		min-width: 500px;
+	}
 }
 
 /* AJAX loading spinner */
@@ -3205,7 +3229,7 @@ body.font-size-percent-200 {
 		form[id$="Form"], form[id$="form"], .form-group, .row.panelSearchForm, .resultsCountPaginatorBlock, #footer {
 			*[class*="col-md"],
 			*[class*="col-sm"] {
-				&:not([role="gridcell"]):not([role="columnheader"]):not(.field-add-delete-input):not(.field-add-delete):not(#file-preview-icon-block):not(#file-preview-description-block) {
+				&:not([role="gridcell"]):not([role="columnheader"]):not(.field-add-delete-input):not(.field-add-delete):not(#file-preview-icon-block):not(#file-preview-description-block):not(#dv-sidebar):not(#dv-main) {
 					width: auto;
 					display: block;
 					float: none;
@@ -3215,7 +3239,7 @@ body.font-size-percent-200 {
 
 			*[class*="col-md-offset"],
 			*[class*="col-sm-offset"] {
-				&:not([role="gridcell"]):not([role="columnheader"]):not(.field-add-delete-input):not(.field-add-delete):not(#file-preview-icon-block):not(#file-preview-description-block) {
+				&:not([role="gridcell"]):not([role="columnheader"]):not(.field-add-delete-input):not(.field-add-delete):not(#file-preview-icon-block):not(#file-preview-description-block):not(#dv-sidebar):not(#dv-main) {
 					margin-left: 0;
 				}
 			}
