--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
@@ -2580,7 +2580,7 @@ div[id$="facetCategoryList"] div li div.ui-widget {
 
 /* Search results */
 
-#facetCategoryForm a.facetLink {
+.ui-datalist-item a.facetLink {
 	text-decoration: underline;
 }
 
