Closes #1278: Hiding file-related differences from version diff dialog for embargoed data

--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
@@ -4719,6 +4719,10 @@ body.font-size-percent-200 {
 		border-color: $contrast-background-color;
 	}
 
+	 #version-details-block-embargoed > div {
+		 border-color: $contrast-background-color;
+	 }
+
 	/* Dashboard */
 
 	#dashboard-block div.card-box {
