--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
@@ -1725,7 +1725,7 @@ div.filesTable {
 	}
 }
 
-@media screen and (min-width: $screen-md-min) {
+@media screen and (max-width: $screen-md-min) {
 	.table-othertos {
 		position: relative;
 		width: 50%;
