--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
@@ -3043,14 +3043,12 @@ div.filesTable {
 	padding: 0 4px;
 }
 
-.datasetfield-value {
-	p {
-		margin-bottom: 0;
-	}
+.datasetfield-value + .datasetfield-value {
+	border-top: 1px solid $gray-border-color;
+	padding-top: 8px;
 
-	+ .datasetfield-value {
-		border-top: 1px solid $gray-border-color;
-		padding-top: 8px;
+	p {
+		margin-top: 10px;
 	}
 }
 
