--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
@@ -1798,6 +1798,10 @@ div.filesTable {
 
 @media screen and (max-width: $screen-xs-max) {
 	@include table-metrics-mobile;
+
+	th.table-cell-vertical-mobile .ui-column-title {
+		writing-mode: vertical-lr;
+	}
 }
 
 .ui-sortable-handle {
@@ -3200,6 +3204,8 @@ div.filesTable {
 .ui-dialog.ui-widget.ui-widget-content {
 	min-height: 200px;
 	min-width: 320px;
+	max-width: 100vw;
+	max-height: 100vh;
 	border: none;
 	border-radius: $border-radius;
 	box-shadow: 0 5px 10px rgba(0,0,0,0.2);
