Closes #2016: On Metrics page, long labels may go below radios

--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
@@ -1793,17 +1793,28 @@ div.filesTable {
 	table {
 		padding-left: 10px;
 	}
+
+	.ui-selectoneradio {
+		tr, td {
+			display: flex;
+			align-items: center;
+		}
+	}
 }
 
 @mixin table-metrics-mobile {
 	.table-metrics {
-		&, tbody, tr, td {
+		&, tbody, .ui-selectoneradio tr, .ui-selectoneradio td {
 			display: block;
 			width: 100%;
 		}
 
+		tbody > tr > td {
+			width: 100%;
+		}
+
 		table {
-			&, tbody, tr, td {
+			&, tbody, .ui-selectoneradio tr, .ui-selectoneradio td {
 				display: block;
 				width: 100%;
 			}
