--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
@@ -1680,6 +1680,13 @@ div.filesTable {
 	}
 }
 
+/* Fix erroneous horizontal scrollbar in mobile Chrome */
+.ui-datatable-tablewrapper {
+	.ui-helper-hidden-accessible, .sr-only {
+		position: fixed;
+	}
+}
+
 /* Fix submenus in scrollable tables not overflowing outside */
 .ui-tabs {
 	position: static;
@@ -3141,6 +3148,10 @@ div.filesTable .ui-paginator {
 
 .dataverseHeaderCell span[style="color:#888888;"] {
 	color: $gray-text-color !important;
+}
+
+#dataverseHeader .dataverseHeaderLogo img {
+	max-width: Min(940px, calc(100vw - 30px));
 }
 
 @media screen and (max-width: $screen-xs-max) {
