Closes #2209: Fix input width

--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
@@ -200,6 +200,10 @@ button.ui-button:not(.ui-button-icon-only) .ui-icon.glyphicon {
 	font-size: 0.933em;
 }
 
+.stretched {
+    width: 100%;
+}
+
 /* "Skip to content" label */
 .sr-only.impaired-navigation:focus {
 	position: fixed;
