Closes #2415: Menu entry not adjusting to sub-menu entries on mobile

--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
@@ -2130,7 +2130,7 @@ $navbar-height: 102px;
 
 	#topNavBar .navbar-nav {
 		> li {
-			height: 40px;
+			min-height: 40px;
 			vertical-align: bottom;
 			float: none;
 			display: inline-block;
