--- a/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
+++ b/dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
@@ -1557,6 +1557,14 @@ div[id$="notifications"].ui-tabs-panel {
 	}
 }
 
+.notification-col-select {
+    width: 20px;
+}
+
+.notification-col-send-date {
+    width: 210px;
+}
+
 /* Tables */
 
 .visuallyhidden {
