Closes #2572: Created controlled vocabulary enhanced select input Code review remarks
Co-authored-by: Szymon Drawski sdrawski@icm.edu.pl
Co-authored-by: Krzysztof Mądry <k.madry@icm.edu.pl>
Co-authored-by: Filipe Dias Lewandowski

Signed-off-by: Daniel Korbel <dkorbel@icm.edu.pl>

--- a/dataverse-webapp/src/main/webapp/WEB-INF/templates/dataset/inputRenderer/controlledVocabEnhancedInputField.xhtml
+++ b/dataverse-webapp/src/main/webapp/WEB-INF/templates/dataset/inputRenderer/controlledVocabEnhancedInputField.xhtml
@@ -91,7 +91,7 @@
                     unique="true"
                     widgetVar="suggestionTextEnhancedSingleSelectWidget"
                     moreText="Load more"
-                    maxResults="#{inputRenderer.getMaxResults()-1}"
+                    maxResults="#{inputRenderer.numberOfResults()-1}"
                     style="width: 100%;"
     >
         <p:ajax event="moreText"
@@ -115,7 +115,7 @@
                     unique="true"
                     widgetVar="suggestionTextEnhancedMultipleSelectWidget"
                     moreText="Load more"
-                    maxResults="#{inputRenderer.getMaxResults()-1}"
+                    maxResults="#{inputRenderer.numberOfResults()-1}"
     >
         <p:ajax event="moreText"
                 listener="#{inputRenderer.loadMore(datasetField, 'suggestionTextEnhancedMultipleSelectWidget')}"
